--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>CSS IS FUN</title>
 </head>
 <body>
-  hi
+  <div class="container">
+    <div class="child"></div>
+  </div>
 </body>
 </html>
