--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <title>CSS IS FUN</title>
 </head>
 <body>
-  <div class="container">
-    <div class="child"></div>
+  <div class="page">
+    <div class="container">
+      <div class="child"></div>
+    </div>
   </div>
 </body>
 </html>
